--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "sweetalert2": "^11.4.0"
     },
-    "dependencies": {
-        "sweetalert2": "^11.3.2"
-    }
+    "dependencies": {}
 }
